# prompt-eval-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: eval.yml  tests.yml
assets/: demo.tape
benchmarks/: results.jsonl
docs/: index.html
evalharness/: checks.py  runner.py
examples/: generic_eval.jsonl  intake_summary.jsonl
scripts/: demo_compliant_run.py  render_dashboard.py  run_eval.py
tests/: test_eval_gate.py  test_harness.py
