[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-eval-harness"
version = "0.1.0"
description = "A small, dependency-free harness for scoring prompts against a rubric of deterministic checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael R. Dionne" }]
keywords = ["llm", "eval", "prompt-engineering", "testing"]

[project.urls]
Homepage = "https://github.com/MichaelRDionne/prompt-eval-harness"
Dashboard = "https://michaelrdionne.github.io/prompt-eval-harness/"

[tool.setuptools]
packages = ["evalharness"]
